templates/style.scss
// FONTS
$font-family-sans: "Fira Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
$font-family-serif: "Source Serif Pro",Georgia,Times,"Times New Roman",serif;
$font-family-mono: "Source Code Pro", Menlo, Monaco, Consolas, "DejaVu Sans Mono", Inconsolata, monospace;

// COLORS - Guess what?
$color-standard: #000;             // pure black
$color-url: #4d76ae;               // blue
$color-macro: #068000;             // green
$color-struct: #df3600;            // red
$color-enum: #5e9766;              // light green
$color-type: #e57300;              // orange
$color-keyword: #8959A8;           // purple
$color-string: #718C00;            // greenish
$color-macro-in-code: #3E999F;     // blueish
$color-lifetime-incode: #B76514;   // orangish
$color-comment-in-code: #8E908C;   // light gray
$color-background-code: #F5F5F5;   // lighter gray
$color-border: #ddd;               // gray
$color-red: #d93d3d;               // red
$top-navbar-height: 32px;          // height of the floating top navbar

// pure compatible media queries
$media-sm: "screen and (min-width: 35.5em)";
$media-md: "screen and (min-width: 48em)";
$media-lg: "screen and (min-width: 64em)";
$media-xl: "screen and (min-width: 80em)";
// usage:
// @media #{$media-sm} { ... }

html, button, input, select, textarea,
.pure-g [class *= "pure-u"] {
    font-family: $font-family-sans;
    color: $color-standard;
}

.pure-button-normal {
    background-color: #fff;
    box-sizing: border-box !important;
    border: 1px solid $color-border;
}

.description {
    font-family: $font-family-serif;
}

// rustdoc overrides
div.rustdoc {
    font-family: $font-family-serif;
    padding: 10px 15px 20px 15px;

    @media (max-width: 700px) {
        padding-top: 0;
    }

    .sidebar {
        @media (min-width: 701px) {
            margin-top: $top-navbar-height;
        }

        .block > ul > li {
            margin-right: -10px;
        }
    }

    #source-sidebar {
        top: $top-navbar-height;
    }

    #sidebar-toggle {
        top: 62px;
    }

    @media (max-width: 700px) {
        .sidebar.mobile {
            top: $top-navbar-height;

            .sidebar-elems.show-it {
                top: 77px;
            }

            #sidebar-filler {
                top: $top-navbar-height;
            }
        }
    }
}

body {
    padding: 0;
    margin: 0;
    // Since top navbar is fixed, we need to add padding to the body content.
    padding-top: $top-navbar-height;
}

// this is a super nasty override for help dialog in rustdocs
// see #52 for details
body.blur > :not(#help) {
    filter: none;
    -webkit-filter: none;
}

body.blur > div.nav-container > *,
body.blur > div.cratesfyi-package-container > *,
body.blur > div.rustdoc > :not(#help) {
    filter: blur(8px);
    -webkit-filter: blur(8px);
    opacity: .7;
}

// rustdocs have 200px sidebar and
// max-width 960px main pane
// BUT I really want to make the website centered
body {
    text-align: center;
    font: 16px/1.4 $font-family-sans;
}

pre {
    font-size: 0.9rem;
    overflow: auto;
    white-space: pre;
}

div.container {
    max-width: 1160px;
    margin: 0 auto;
    text-align: left;
}

div.container-rustdoc {
    text-align: left;
}
/* ... */

